CmdError.txt
SourceCode.cpp: In function 'int main()':
SourceCode.cpp:10:19: error: 'sdf' was not declared in this scope
         cin>>a>>b;sdf
                   ^
